[gd_scene load_steps=7 format=3 uid="uid://bj6w7b8ehmjet"]

[ext_resource type="Script" path="res://scripts/seccion_5_db.gd" id="1_hmole"]
[ext_resource type="Texture2D" uid="uid://cgve0xfq8pt8f" path="res://Imagenes/seccion5/seccion5db-12.png" id="1_jj5dc"]
[ext_resource type="PackedScene" uid="uid://b7jonfd41k68h" path="res://Escenas/cuadro_dialogo.tscn" id="3_37i6i"]

[sub_resource type="Animation" id="Animation_mb1kr"]
resource_name = "sacudelo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrollContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-279, 1), Vector2(310, -2), Vector2(-238, -17), Vector2(523, -4), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"llenarCuadros"
}]
}

[sub_resource type="Animation" id="Animation_xy1w1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrollContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_latss"]
_data = {
"RESET": SubResource("Animation_xy1w1"),
"sacudelo": SubResource("Animation_mb1kr")
}

[node name="seccion5db" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hmole")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scroll_vertical = 405

[node name="TextureRect" type="TextureRect" parent="ScrollContainer"]
layout_mode = 2
texture = ExtResource("1_jj5dc")

[node name="texto_usuario" type="TextEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 323.0
offset_top = 306.0
offset_right = 979.0
offset_bottom = 434.0

[node name="siete" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 572.0
offset_right = 1024.0
offset_bottom = 603.0
item_count = 1
selected = 0
popup/item_0/text = "--- Seleccionar ---"
popup/item_0/id = 0

[node name="siete2" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 600.0
offset_right = 1024.0
offset_bottom = 631.0
item_count = 1
selected = 0
popup/item_0/text = "--- Seleccionar---"
popup/item_0/id = 0

[node name="siete3" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 632.0
offset_right = 1024.0
offset_bottom = 663.0

[node name="seis" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 664.0
offset_right = 1024.0
offset_bottom = 695.0
item_count = 1
selected = 0
popup/item_0/text = "--- Seleccionar ---"
popup/item_0/id = 0

[node name="seis2" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 691.0
offset_right = 1024.0
offset_bottom = 722.0
item_count = 1
selected = 0
popup/item_0/text = "--- Seleccionar ---"
popup/item_0/id = 0

[node name="seis3" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 723.0
offset_right = 1024.0
offset_bottom = 754.0

[node name="tres" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 757.0
offset_right = 1024.0
offset_bottom = 788.0
item_count = 1
selected = 0
popup/item_0/text = "--- Seleccionar ---"
popup/item_0/id = 0

[node name="tres2" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 785.0
offset_right = 1024.0
offset_bottom = 816.0
item_count = 1
selected = 0
popup/item_0/text = "--- Seleccionar ---"
popup/item_0/id = 0

[node name="tres3" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 816.0
offset_right = 1024.0
offset_bottom = 847.0

[node name="CuadroDialogo" parent="." instance=ExtResource("3_37i6i")]
layout_mode = 1
offset_left = -663.0
offset_top = -433.0
offset_right = 704.0
offset_bottom = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_latss")
}

[connection signal="item_selected" from="ScrollContainer/TextureRect/siete2" to="." method="_on_siete_2_item_selected"]
